update openapi configuration